# tidal-mcp

./: .dockerignore  .gitignore  AGENTS.md  DOCKERHUB.md  Dockerfile  README.md  auth_cli.py  docker-compose.auth.yml  docker-compose.yml  pyproject.toml  server.json  start_mcp.py
mcp_server/: server.py  utils.py
tasks/: dead-code-and-cleanup.md  docker-and-deployment.md  error-handling-consistency.md  input-validation.md  session-management.md  test-coverage.md
tests/: conftest.py  test_browser_session.py  test_mcp_utils.py  test_routes.py  test_server.py  test_utils.py
tidal_api/: browser_session.py  utils.py
tidal_api/routes/: auth.py  playlists.py  search.py  tracks.py
